--- a/app/assets/stylesheets/talker.scss
+++ b/app/assets/stylesheets/talker.scss
@@ -5,22 +5,45 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  .learn-button {
-    opacity: 0.8;
+  .button-div {
     position: absolute;
-    width: 100%;
-    line-height: 50px;
-    border: none;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    font-size: 1.2em;
-    text-align: center;
-    z-index: 100;
-    cursor: pointer;
-    &:hover {
-      opacity: 1;
+      width: 100%;
+      line-height: 50px;
+      z-index: 100;
+    .learn-button {
+      opacity: 0.8;
+      position: relative;
+      width: 100%;
+      float: left;
+      line-height: 50px;
+      border: 1px solid white;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      font-size: 1.2em;
+      text-align: center;
+      cursor: pointer;
+      &:hover {
+        opacity: 1;
+        }
+      }
+    .setting-button {
+      opacity: 0.8;
+      position: relative;
+      width: 50%;
+      float: right;
+      line-height: 50px;
+      border: 1px solid white;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      font-size: 1.2em;
+      text-align: center;
+      z-index: 100;
+      cursor: pointer;
+      &:hover {
+        opacity: 1;
+        }
+      }
     }
-  }
   .chat {
     height: 92%;
     padding: 10px;
